[gd_scene load_steps=8 format=3 uid="uid://dm2tosesjfq22"]

[ext_resource type="Script" path="res://Entities/Environment/destructible_wall.gd" id="1_dmkyx"]
[ext_resource type="Texture2D" uid="uid://d0id0y38gcmhm" path="res://art/props/random_rock_debris.png" id="2_pg4u0"]
[ext_resource type="Texture2D" uid="uid://pyuflx4m0ii5" path="res://art/props/wall-breakable.png" id="2_y2hwo"]
[ext_resource type="AudioStream" uid="uid://cymibnijhml5u" path="res://audio/sfx/placeholder/pot_crash.wav" id="3_s845f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_goag4"]
size = Vector2(13, 97)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hwbpm"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = true

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6dulq"]
streams_count = 1
stream_0/stream = ExtResource("3_s845f")
stream_0/weight = 1.0

[node name="DestructibleWall" type="StaticBody2D" groups=["Kickables"]]
collision_layer = 24
collision_mask = 7
script = ExtResource("1_dmkyx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -48.5)
shape = SubResource("RectangleShape2D_goag4")

[node name="WallSprite" type="Sprite2D" parent="."]
position = Vector2(0, -49)
texture = ExtResource("2_y2hwo")

[node name="DebrisParticles" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_hwbpm")
position = Vector2(0, -51)
emitting = false
one_shot = true
explosiveness = 0.56
texture = ExtResource("2_pg4u0")
emission_shape = 3
emission_rect_extents = Vector2(12, 92)
direction = Vector2(1, -1)
initial_velocity_min = 250.0
initial_velocity_max = 500.0
anim_offset_max = 1.0

[node name="DemolitionNoises" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_6dulq")
bus = &"sfx"

[connection signal="finished" from="DemolitionNoises" to="." method="_on_demolition_noises_finished"]
